--- a/1-screening.tex
+++ b/1-screening.tex
@@ -13,11 +13,13 @@
 
 \subsubsection{Different classes of nanoporous materials}
 
-Nanoporous materials are iupac?
+Nanoporous materials are defined as materials with a nanoscale structure constituted of pores and cavities, which some are connected by a network of channels. These pores can be empty or filled with a variety of substances called adsorbates. By adhering molecules from a liquid or gas phase into these nanopores, we can use them in various applications such as catalysis, gas storage, separation and purification, drug delivery, energy storage and conversion, and sensing. By designing the size, shape and distribution of the pores, we can tailor the physicochemical properties to the target application.
 
-definition of porosity/void fraction of surface area 
+This process of adhering particles or molecules on surfaces is called adsorption. Adsorption occurs between due to attractive forces between adorbates and the adsorbent surface, such as van der Waals forces, hydrogen bonding, and electrostatic interactions. The adsorption performance depends on the chemical nature of the interface and its surface area. We can characterize nanoporous materials by measuring their density, accessible surface area and pore volume.\cite{Rouquerol_1994} 
 
 \textbf{crystalline}
+
+%Nanoporous materials can be found naturally, such as zeolites and some types of clays, or can be synthetically produced using a variety of methods such as sol-gel synthesis, electrochemical deposition, and template synthesis. They have a wide range of applications, including catalysis, gas storage, separation and purification, drug delivery, energy storage and conversion, and sensing. Nanoporous materials have attracted significant interest in recent years due to their potential to address important technological challenges in fields such as energy and environmental sustainability.
 
 Zeolite
 
