--- a/thesis.bib
+++ b/thesis.bib
@@ -824,3 +824,16 @@ for Global Competitiveness},
 	title = {Robust Machine Learning Models for Predicting High {CO}2 Working Capacity and {CO}2/H2 Selectivity of Gas Adsorption in Metal Organic Frameworks for Precombustion Carbon Capture},
 	journal = {The Journal of Physical Chemistry C}
 }       
+@article{Rouquerol_1994,
+	doi = {10.1351/pac199466081739},
+	url = {https://doi.org/10.1351%2Fpac199466081739},
+	year = 1994,
+	month = {jan},
+	publisher = {Walter de Gruyter {GmbH}},
+	volume = {66},
+	number = {8},
+	pages = {1739--1758},
+	author = {J. Rouquerol and D. Avnir and C. W. Fairbridge and D. H. Everett and J. M. Haynes and N. Pernicone and J. D. F. Ramsay and K. S. W. Sing and K. K. Unger},
+	title = {Recommendations for the characterization of porous solids (Technical Report)},
+	journal = {Pure and Applied Chemistry}
+}
